FIX - video width on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,8 @@ body {
 }
 
 video {
+  width:100%;
+  height: 100%;
   border-radius: 1rem;
   box-shadow: 0 0 60px 10px rgba(0,0,0,0.25);
 }
